# pysnapshot

./: .gitignore  README.md  pyproject.toml
src/pysnapshot/: __init__.py  __main__.py  _server.py  _snapshot.py
